fixes route multiplication